# metacognitive-self-improvement

./: .gitignore  README.md  run.ps1  stop.ps1
backend/: README.md  pyproject.toml
backend/app/: account_service.py  database.py  datasets.py  engine.py  github_service.py  main.py  openai_service.py  settings.py
backend/app/prompts/: propose_mutation.md  review_repository.md  review_submission.md
backend/app/selfimprovingprompt/: engine.py
backend/app/selfimprovingprompt/prompts/: mutate_agent_prompt.md
docs/: GUIDE.md  api.md  architecture.md  methods.md
scripts/: generate_basic_pdf.py  generate_user_manual.py  plot_results.py  run_experiment.py
