[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperagents-backend"
version = "0.1.0"
description = "Proof-of-concept backend for a HyperAgents-inspired self-improving agent framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "openai>=1.0,<2.0",
  "sqlmodel>=0.0.18,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"app.prompts" = ["*.md"]
"app.selfimprovingprompt.prompts" = ["*.md"]
